# HOJA-ESP32-Baseband

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  sdkconfig_prevKevin
docs/: Developer_Reference.txt  LED_Blink_Guide.txt  RetroOnyx_VB_Controller_README.md  next_session_checklist.md
main/: CMakeLists.txt  Good BlueRetro Connection without Crashing.txt  LED.c  bt_serial_logger.c  core_bt_dinput.c  core_bt_sinput.c  core_bt_switch.c  core_bt_xinput.c  drv2605_esp.c  haptics_architecture_v2_v3.md  main.c  switch_commands.c  switch_haptics.c  switch_haptics_notes.md  switch_haptics_notes.txt  util_bt_hid.c
main/include/: LED.h  XboxDescriptors.h  bt_serial_logger.h  core_bt_dinput.h  core_bt_switch.h  core_bt_xinput.h  core_bt_xinput_old.h  core_bt_xinput_older.h  crosscore_snapshot.h  drv2605_esp.h  hoja_includes.h  hoja_types.h
main/include/switch/: switch_commands.h  switch_haptics.h
main/old haptic/: drv2605_esp.c  drv2605_esp.h
